<resources>
    <string name="app_name">سکان</string>
    <string name="login_app">ورود به سکان</string>
    <string name="cellphone">شماره تلفن همراه</string>
    <string name="send_verify_code">ارسال کد تایید</string>
    <string name="error_get_api">بروز خطا هنگام اتصال به اینترنت</string>
    <string name="retry_action">تلاش مجدد</string>
    <string name="verify_code_sent">کد تایید به شماره همراه شما ارسال شد.</string>
    <string name="login">ورود</string>
    <string name="send_again">ارسال مجدد کد</string>
    <string name="count_down">%1$d ثانیه تا فعال شدن ارسال مجدد</string>
    <string name="welcome">به سکان خوش آمدید</string>
    <string name="home">خانه</string>
    <string name="history">سوابق</string>
    <string name="support">پشتیبانی</string>
    <string name="create_bank_account">افتتاح حساب</string>
    <string name="karafarin">بانک کارآفرین</string>
    <string name="bill">قبض</string>
    <string name="water">آب</string>
    <string name="electricity">برق</string>
    <string name="home_phone">تلفن ثابت</string>
    <string name="charge">شارژ</string>
    <string name="irancell">ایرانسل</string>
    <string name="avval">همراه اول</string>
    <string name="rightel">رایتل</string>
    <string name="talia">تالیا</string>
    <string name="add_water_bill_id">برای مشاهده قبض آب، شناسه قبض آب را وارد نمایید.</string>
    <string name="add_electricity_bill_id">برای مشاهده قبض برق، شناسه قبض برق را وارد نمایید.</string>
    <string name="add_irancell_bill_id">برای مشاهده قبض ایرانسل، شماره موبایل ایرانسل خود را وارد نمایید.</string>
    <string name="add_phone_bill_id">برای مشاهده قبض تلفن ثابت، شماره تلفن خود را وارد نمایید.</string>
    <string name="water_bill_id">شناسه قبض آب</string>
    <string name="electricity_bill_id">شناسه قبض برق</string>
    <string name="irancell_bill_id">شماره موبایل ایرانسل</string>
    <string name="phone_bill_id">شماره تلفن ثابت</string>
    <string name="water_query">استعلام قبض آب</string>
    <string name="electricity_query">استعلام قبض برق</string>
    <string name="irancell_query">استعلام قبض ایرانسل</string>
    <string name="phone_query">استعلام قبض تلفن</string>
    <string name="view_bill_details">مشاهده جزئیات قبض</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="pay_id">شناسه پرداخت</string>
    <string name="due_date">تاریخ سررسید</string>
    <string name="pay_amount">مبلغ قابل پرداخت</string>
    <string name="pay">پرداخت</string>
</resources>