<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/login_app" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@drawable/shape_rect_input"
            android:gravity="start"
            android:hint="@string/cellphone"
            android:inputType="phone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_verify_code"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/send_verify_code" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/red"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>