<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.VerifyFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="72dp"
            app:srcCompat="@drawable/ic_sms"
            app:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verify_code_sent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/txt_cellphone"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:text="09356789012" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:pinLineColors="@color/red"
            app:pinLineStroke="2dp"
            app:pinLineStrokeSelected="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/login" />

        <ProgressBar
            android:id="@id/progress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/red"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_count_down"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/send_again" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>