<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.BillDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/pnl_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/red" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/pnl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:srcCompat="@drawable/draw_water_org" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_id"
                    android:textColor="@color/dark_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_bill_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="2154566500" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_id"
                    android:textColor="@color/dark_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_pay_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="2154566500" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:textColor="@color/dark_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="2154566500" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_amount"
                    android:textColor="@color/dark_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_pay_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="2154566500" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pay"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pay" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>