<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.DashboardFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_grey">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/dark_blue"
                android:gravity="center_horizontal|top"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_logout"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_exit"
                        app:tint="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_cellphone"
                        style="@style/SmallText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/white"
                        tools:text="091234567895" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/draw_mainlogo"
                    app:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_bank_account" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:flexWrap="wrap">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_karafarin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            app:srcCompat="@drawable/draw_karafarin" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/karafarin"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.flexbox.FlexboxLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/bill" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:flexWrap="wrap">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            app:srcCompat="@drawable/draw_water_org" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/water"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_electricity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_tavanir" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/electricity"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_ict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_ict" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_phone"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_irancell_bill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_irancell" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/irancell"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.flexbox.FlexboxLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/charge" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:flexWrap="wrap">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_irancell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_irancell" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/irancell"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_avval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_avval" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/avval"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_rightel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_rightel" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rightel"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/pnl_talia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:background="@drawable/shape_rect_white"
                            android:padding="24dp"
                            app:srcCompat="@drawable/draw_talia" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/talia"
                            android:textColor="@color/blue_grey" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.flexbox.FlexboxLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.appcompat.widget.LinearLayoutCompat>